force-app/main/default/objects/vlocity_ps__Request__c/vlocity_ps__Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>