force-app/main/default/objects/vlocity_ps__Request__c/fields/vlocity_ps__AccountName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>