force-app/main/default/objects/vlocity_ps__Request__c/fields/vlocity_ps__Contact__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>