force-app/main/default/objects/vlocity_ps__Request__c/fields/vlocity_ps__PSCaseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PSCaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>