force-app/main/default/objects/vlocity_ps__Request__c/fields/vlocity_ps__Subject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Subject__c</fullName>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>